# JPEG_compression

./: .gitignore  CMakeLists.txt  README.md  clean.sh  main.cpp  start.sh
benchmark_results/: results.md
benchmark_results/build_O0/: binary_info.txt  disassembly.txt  jpeg_compressor  output.txt
benchmark_results/build_O2/: binary_info.txt  disassembly.txt  jpeg_compressor  output.txt
benchmark_results/build_O3/: binary_info.txt  disassembly.txt  jpeg_compressor  output.txt
benchmark_results/build_Ofast/: disassembly.txt  jpeg_compressor  output.txt
benchmark_results/build_Os/: binary_info.txt  disassembly.txt  jpeg_compressor  output.txt
